[gd_scene load_steps=3 format=3 uid="uid://bfup2p6wpte44"]

[ext_resource type="Script" uid="uid://dggvxe2lclbxb" path="res://scenes/ui/menus/character_customizer/customizer_controller.gd" id="1_4gdiv"]
[ext_resource type="PackedScene" uid="uid://cubtrfejltu51" path="res://scenes/core/player/character_sprites.tscn" id="2_rx7te"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4gdiv")

[node name="character_sprites" parent="Control" instance=ExtResource("2_rx7te")]
position = Vector2(257, 182)
scale = Vector2(13, 13)

[node name="Outfit_Category_Picker" type="ScrollContainer" parent="Control"]
layout_mode = 2
offset_left = 600.0
offset_top = 100.0
offset_right = 1200.0
offset_bottom = 227.0

[node name="GridContainer" type="GridContainer" parent="Control/Outfit_Category_Picker"]
layout_mode = 2
columns = 6

[node name="random" type="Button" parent="Control"]
layout_mode = 0
offset_left = 155.0
offset_top = 500.0
offset_right = 351.0
offset_bottom = 593.0
text = "generate random"

[node name="save" type="Button" parent="Control"]
layout_mode = 0
offset_left = 154.0
offset_top = 412.0
offset_right = 350.0
offset_bottom = 505.0
text = "save
"

[node name="reset" type="Button" parent="Control"]
layout_mode = 0
offset_left = 155.0
offset_top = 597.0
offset_right = 351.0
offset_bottom = 690.0
text = "reset"

[node name="back" type="Button" parent="Control"]
layout_mode = 0
offset_left = 439.0
offset_top = 592.0
offset_right = 635.0
offset_bottom = 685.0
text = "Back
"

[node name="save_feedback" type="Label" parent="Control"]
layout_mode = 0
offset_left = 187.0
offset_top = 677.0
offset_right = 457.0
offset_bottom = 713.0

[connection signal="pressed" from="Control/random" to="Control" method="_random_button_pressed"]
[connection signal="pressed" from="Control/save" to="Control" method="_save_button_pressed"]
[connection signal="pressed" from="Control/reset" to="Control" method="_reset_button_pressed"]
[connection signal="pressed" from="Control/back" to="Control" method="_on_back_pressed"]
